Feat/138/chargement offres

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -34,7 +34,7 @@
     "orderStatus": "Statut de la commande",
     "orderReference": "Référence de la commande",
     "orderDate": "Date de la commande",
-    "offer": "Offre",
+    "offers": "Offres",
     "quantity": "Quantité",
     "customFields": "Champs personnalisés",
     "orderCreator": "Créateur de la commande",
