Fix to validate champs libres

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -36,7 +36,7 @@
     "orderDate": "Date de la commande",
     "offers": "Offres",
     "quantity": "Quantité",
-    "customFields": "Champs personnalisés",
+    "customFields": "Champs libres",
     "orderCreator": "Créateur de la commande",
     "active": "Activé",
     "deliveryCountry": "Pays de livraison",
