--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -10,6 +10,9 @@
   "showOrHideColumns": "Ajouter / Masquer des colonnes",
   "save": "Enregistrer",
   "logout": "Déconnexion",
+  "common": {
+    "billingAccounts": "Compte de facturation"
+  },
   "getsim": {
     "manage-orders": "Gestion des commandes",
     "order-sim": "Commander des cartes SIM"
@@ -42,5 +45,15 @@
     "deliveryCountry": "Pays de livraison",
     "postalCode": "Code postal",
     "city": "Ville"
+  },
+  "orders": {
+    "new": {
+      "customer": "Client",
+      "product": "Produit",
+      "service": "Services",
+      "delivery": "Livraison",
+      "settings": "Paramètres",
+      "synthesis": "Récapitulatif de la commande"
+    }
   }
 }
