--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -14,7 +14,11 @@
     "manage-orders": "Gestion des commandes",
     "order-sim": "Commander des cartes SIM",
     "show-all-sim-types": "Afficher tous les types de cartes",
-    "choose-sim-amount": "et une quantité"
+    "choose-sim-amount": "et une quantité",
+    "sim-type-labels": {
+      "format": "Format",
+      "patent": "Brevets et fonctionnalité"
+    }
   },
   "col": {
     "id": "ID",
