Feat/2/order creation step select

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,6 +47,8 @@
     "city": "Ville"
   },
   "orders": {
+    "choose-account": "Choisir un compte de facturation",
+    "choose-partner": "Choisir un partenaire",
     "new": {
       "customer": "Client",
       "product": "Produit",
