--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,7 +11,9 @@
   "save": "Enregistrer",
   "logout": "Déconnexion",
   "common": {
-    "billingAccounts": "Compte de facturation"
+    "billingAccount": "Compte de facturation",
+    "product": "Produit",
+    "quantity": "Quantité"
   },
   "getsim": {
     "manage-orders": "Gestion des commandes",
