--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,19 +11,11 @@
   "save": "Enregistrer",
   "logout": "Déconnexion",
   "common": {
-    "billingAccount": "Compte de facturation",
-    "product": "Produit",
-    "quantity": "Quantité"
+    "billingAccounts": "Compte de facturation"
   },
   "getsim": {
     "manage-orders": "Gestion des commandes",
-    "order-sim": "Commander des cartes SIM",
-    "show-all-sim-types": "Afficher tous les types de cartes",
-    "choose-sim-amount": "et une quantité",
-    "sim-type-labels": {
-      "format": "Format",
-      "patent": "Brevets et fonctionnalité"
-    }
+    "order-sim": "Commander des cartes SIM"
   },
   "col": {
     "id": "ID",
@@ -55,8 +47,6 @@
     "city": "Ville"
   },
   "orders": {
-    "choose-account": "Choisir un compte de facturation",
-    "choose-partner": "Choisir un partenaire",
     "new": {
       "customer": "Client",
       "product": "Produit",
