--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,11 +11,19 @@
   "save": "Enregistrer",
   "logout": "Déconnexion",
   "common": {
-    "billingAccounts": "Compte de facturation"
+    "billingAccount": "Compte de facturation",
+    "product": "Produit",
+    "quantity": "Quantité"
   },
   "getsim": {
     "manage-orders": "Gestion des commandes",
-    "order-sim": "Commander des cartes SIM"
+    "order-sim": "Commander des cartes SIM",
+    "show-all-sim-types": "Afficher tous les types de cartes",
+    "choose-sim-amount": "et une quantité",
+    "sim-type-labels": {
+      "format": "Format",
+      "patent": "Brevets et fonctionnalité"
+    }
   },
   "col": {
     "id": "ID",
@@ -47,6 +55,8 @@
     "city": "Ville"
   },
   "orders": {
+    "choose-account": "Choisir un compte de facturation",
+    "choose-partner": "Choisir un partenaire",
     "new": {
       "customer": "Client",
       "product": "Produit",
