--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,7 +11,9 @@
   "save": "Enregistrer",
   "logout": "Déconnexion",
   "common": {
-    "billingAccounts": "Compte de facturation"
+    "billingAccounts": "Compte de facturation",
+    "YES": "Oui",
+    "NO": "No"
   },
   "getsim": {
     "manage-orders": "Gestion des commandes",
@@ -21,7 +23,15 @@
     "id": "ID",
     "creationDate": "Date de création",
     "orderDate": "Date de commande",
-    "activationAsked": "Active"
+    "activationAsked": "Active",
+    "quantity": "Quantité",
+    "status": "Statut",
+    "product": "Produit",
+    "statuses": {
+      "CONFIRMED": "Confirmée",
+      "TERMINATED": "Terminée",
+      "NOT_VALIDATED": "Non validée"
+    }
   },
   "indicators": {
     "ordersToValidate": "Commandes à valider",
