--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -68,6 +68,7 @@
   "orders": {
     "choose-account": "Choisir un compte de facturation",
     "choose-partner": "Choisir un partenaire",
+    "choose-delivery": "Choisir un destinataire",
     "new": {
       "customer": "Client",
       "product": "Produit",
