Ajouter des colonnes

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -41,6 +41,9 @@
     "quantity": "Quantité",
     "status": "Statut",
     "product": "Produit",
+    "externalId": "Ref. client",
+    "offer": "Offre",
+    "managementId": "Id gestion",
     "statuses": {
       "CONFIRMED": "Confirmée",
       "TERMINATED": "Terminée",
