Feat/174/create step params

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -9,7 +9,13 @@
   "unSelectAll": "Tout désélectionner",
   "showOrHideColumns": "Ajouter / Masquer des colonnes",
   "save": "Enregistrer",
+  "cancel": "Annuler",
+  "delete": "Supprimer",
   "logout": "Déconnexion",
+  "required": "Champ obligatoire",
+  "text": "Texte",
+  "list": "Liste",
+  "date": "Date",
   "common": {
     "billingAccount": "Compte de facturation",
     "delivery": "Livraison",
@@ -78,6 +84,13 @@
     "choose-account": "Choisir un compte de facturation",
     "choose-partner": "Choisir un partenaire",
     "choose-delivery": "Choisir un destinataire",
+    "choose-reference": "Saisir une référence de commande",
+    "choose-custom-field": "Renseigner les champs libres",
+    "add-custom-field": "Ajouter un champ libre",
+    "add-custom-field-to-list": "Ajouter un champ libre à la liste",
+    "required-custom-field": "Ce nouveau champ libre sera disponible pour toutes les lignes du parc",
+    "input-label-custom-field": "Saisir le label du champ libre",
+    "choose-type-custom-field": "Choisir le type de champ libre",
     "new": {
       "customer": "Client",
       "product": "Produit",
