Feat/177/create order

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -23,6 +23,7 @@
     "quantity": "Quantité",
     "billingAccounts": "Compte de facturation",
     "orderReference": "Référence Commande",
+    "services": "Services",
     "YES": "Oui",
     "NO": "Non",
     "true": "Oui",
