--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -51,9 +51,12 @@
     "id": "ID",
     "creationDate": "Date de création",
     "orderDate": "Date de commande",
-    "activationAsked": "Active",
+    "activationAsked": "Activation",
+    "preActivationAsked": "Préactivation",
     "quantity": "Quantité",
     "status": "Statut",
+    "recipient": "Destinataire",
+    "partner": "Partenaire",
     "product": "Produit",
     "externalId": "Ref. client",
     "offer": "Offre",
