Feat/187/order actions

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -49,6 +49,15 @@
     "le": "Inférieure à",
     "details": {
       "title": "Commande n° {id}"
+    },
+    "actions": {
+      "btn": "Actions",
+      "DETAIL": "Voir le détail",
+      "EXPORT": "Exporter les lignes",
+      "SHOW_SIM": "Afficher les cartes SIM",
+      "DUPLICATE": "Dupliquer",
+      "CANCEL": "Annuler",
+      "VALIDATE": "Valider"
     }
   },
   "col": {
