Fix/feat/179/detail order actions

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -201,7 +201,6 @@
     }
   },
   "customFields": {
-    "customField": "Champ libre {index}",
-    "customFieldN": "Champ libre N° {index}"
+    "customField": "Champ libre {index}"
   }
 }
