get from api statuses histories

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -197,7 +197,18 @@
       "simCardOffer": "cartes sim & offre",
       "orderedQuantity": "Quantité commandée",
       "importedQuantity": "Quantité importée",
-      "contractReference": "Référence du contrat cadre"
+      "contractReference": "Référence du contrat cadre",
+      "statuses": {
+        "NOT_VALIDATED": "Enregistrée",
+        "VALIDATED": "Validée",
+        "TO_BE_CONFIRMED": "À confirmer",
+        "TO_BE_CONFIRMED_BY_BO": "À confirmer par le BO",
+        "CONFIRMATION_IN_PROGRESS": "En cours de confirmation",
+        "CONFIRMED": "Confirmée",
+        "FAILED": "Échouée",
+        "TERMINATED": "Terminée",
+        "CANCELED": "Annulée"
+      }
     }
   },
   "customFields": {
