--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -152,7 +152,7 @@
     "choose-partner": "Choisir un partenaire",
     "choose-delivery": "Choisir un destinataire",
     "modify-delivery": "Modifier un destinataire",
-    "choose-reference": "Saisir une référence de commande",
+    "choose-reference": "Saisir une référence client",
     "choose-services": "Configurer des services",
     "personalize-services": "Personnaliser les services",
     "choose-custom-field": "Renseigner les champs libres",
