Change display SIM buttons

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -70,7 +70,7 @@
       "btn": "Actions",
       "DETAIL": "Voir le détail",
       "EXPORT": "Exporter les lignes",
-      "IMPORT_SIM": "Importer SIMS",
+      "IMPORT_SIM": "Importer les cartes SIM",
       "SHOW_SIM": "Afficher les cartes SIM",
       "DUPLICATE": "Dupliquer",
       "CANCEL": "Annuler",
