Feat/194/export orders

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -51,6 +51,7 @@
     "order-sim": "Commander des cartes SIM",
     "show-all-sim-types": "Afficher tous les types de cartes",
     "choose-sim-amount": "et une quantité",
+    "export": "Exporter {total} commande(s)",
     "sim-type-labels": {
       "format": "Format",
       "patent": "Brevets et fonctionnalité"
