--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -240,5 +240,11 @@
   },
   "customFields": {
     "customField": "Champ libre {index}"
+  },
+
+  "ui": {
+    "MultiSelectSearch": {
+      "showLess": "Afficher moins"
+    }
   }
 }
