Feat/249/search order

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -238,6 +238,10 @@
         "TERMINATED": "Terminée",
         "CANCELED": "Annulée"
       }
+    },
+    "search": {
+      "order-id": "Id de commande",
+      "client-reference": "Référence client"
     }
   },
   "customFields": {
