--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -142,8 +142,8 @@
       }
     },
     "search": {
-      "act-mass-id": "Id de l’acte de gestion en masse", 
-      "act-mass-id": "Id de l’acte de gestion en masse"
+      "act-mass-id": "Id de l’acte de gestion en masse",
+      "act-unit-id": "Id de l’acte de gestion unitaire"
     }
   },
   "col": {
