--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -90,12 +90,12 @@
       "ACTIVATION": "Activation",
       "STATUS_CHANGE": "Changement de statut",
       "ICCID_CHANGE": "Changement ICCID",
-      "EUICC_NOTIFICATION": "EUICC_NOTIFICATION",
+      "EUICC_NOTIFICATION": "Notification eUICC",
       "EUICC_AUDIT": "Audit eUICC",
       "MSISDN_CHANGE": "Changement MSISDN",
       "ALARM_SETTING": "Positionnement d'alarme",
       "ALARM_UNSETTING": "Dépositionnement d'alarme",
-      "CUSTOM_FIELDS_UPDATE": "Changement des champs custom",
+      "CUSTOM_FIELDS_UPDATE": "changement des champs libres",
       "SERVICE_ADDING": "Ajout de services",
       "SERVICE_REMOVING": "Suppression de services",
       "SERVICE_CHANGE": "Changement de services",
