--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -90,8 +90,8 @@
       "ACTIVATION": "Activation",
       "STATUS_CHANGE": "Changement de statut",
       "ICCID_CHANGE": "Changement ICCID",
-      "EUICC_NOTIFICATION": "Notification eUICC",
-      "EUICC_AUDIT": "Audit eUICC",
+      "EUICC_NOTIFICATION": "Notification EUICC",
+      "EUICC_AUDIT": "Audit EUICC",
       "MSISDN_CHANGE": "Changement MSISDN",
       "ALARM_SETTING": "Positionnement d'alarme",
       "ALARM_UNSETTING": "Dépositionnement d'alarme",
