--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,6 +47,7 @@
     "false": "non",
     "MR": "Monsieur",
     "MRS": "Madame",
+    "MISS": "Madame",
     "code": "Code",
     "firstName": "Prénom",
     "lastName": "Nom",
