--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -93,7 +93,10 @@
       "CONFIRM": "Confirmer"
     },
     "tooltip-text": "Vous pouvez retrouver l’historique des commandes passées, suivre leurs statuts, consulter les informations de détail et accéder aux cartes SIM associées.",
-    "never-ordered": "jamais commandé"
+    "never-ordered": "jamais commandé",
+    "errors": {
+      "NotUniqueExternalIdForParty": "Une commande avec cette référence existe déjà"
+    }
   },
   "getparc": {
     "management-act": "Historique des actes de gestion",
