fix(Ajout d'éléments à la liste de custom fields): #420 ETQU portail, je veux ajouter une valeur dans une liste pour un champ libre existant

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -18,6 +18,7 @@
   "logout": "Déconnexion",
   "required": "Champ obligatoire",
   "optional": "Champ facultatif",
+  "close": "Fermer",
   "text": "Texte",
   "list": "Liste",
   "date": "Date",
